background-color: rgba(0, 0, 0, 0.5); /* set background color to transparent black */   border-radius: 0 0 2rem 2rem;   backdrop-filter: blur(10px); /* apply backdrop filter to blur the background */   display: flex;   flex-direction: row;   justify-content: space-between;   align-items: center;   padding: 10px;   color: #fff;

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="container">
   <header>
     <input type="text" id="searchBox" placeholder="Search...">
   </header>
@@ -14,5 +15,6 @@
   <!-- <main id="tabList">
   </main> -->
   <script src="tabSearch.js"></script>
+  </div>
 </body>
 </html>
